--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/reactstrap": "^8.5.1",
+    "@types/rx": "^4.1.2",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
+    "package": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "reactstrap": "^8.5.1",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
